# Email_generator

./: .gitignore  requirements.txt
server/: pyproject.toml  requirements.txt  server.py
